# of2307

./: README.md  nihao  nihao.cpp
0908/: IntArray.cpp  IntArray.h  array  main.cpp
0912/: check  dynamic.cpp
0912/manual/: check  dynamic.cpp
0915/: a.out  command.cpp  functor_1.cpp
assignment/__MACOSX/作业三/: ._four_leave.cpp  ._lodepng.cpp
assignment/assignment_3/: .assign_3_1.cpp.kate-swp  assign_3_1  assign_3_1.cpp  four_leave.cpp
assignment/assignment_3/homework_yao/: assign_3_0  assign_3_0.cpp  assign_3_1  assign_3_1.cpp
dafoam-tutorials-main/ADODG3_Wing/: preProcessing.sh
dafoam-tutorials-main/NACA0012_Airfoil/incompressible/: OptDesignVars.json  OptView.hst  logMeshGeneration.txt  logOpt.txt  mphys.html  opt_IPOPT.txt  surfaceMesh.xyz  volumeMesh.xyz
dafoam-tutorials-main/NACA0012_Airfoil/incompressible/reports/runScript/: driver_scaling_report.html  inputs.html  n2.html  opt_report.html
func/: bak2txt  common.lib  txt2bak
programming/ex1/: CMakeLists.txt  prescribedPipeInletFvPatchVectorField.C  prescribedPipeInletFvPatchVectorField.H
programming/ex1/testCase/: log.decomposePar  log.mesh  log.potentialFoam  log.reconstruct  log.run  log.sample  log.yPlus
programming/ex1/testCase/0/: U  k  nut  omega  p
programming/ex1/testCase/1/: U  k  nut  omega  p
programming/ex1/testCase/1/polyMesh/: boundary  cellZones  faceZones  neighbour  owner  pointZones  points
programming/ex2/: CMakeLists.txt  pulseFixedValueFvPatchField.H
programming/ex2/lnInclude/: pulseFixedValueFvPatchField.C
shell_script/: comparison.sh  find.sh  first.sh  for_loop1.sh  for_loop2.sh  if.sh  my_script.sh  schemes.txt  test2.sh  test3.sh  var.sh  var2.sh  var3.sh  var6.sh  var7.sh  while_loop1.sh  while_loop2.sh  while_loop3.sh
(+27 files in other folders)
